# usnic_tools

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  usnic_devinfo.c  version.sh
man/: usnic_devinfo.1.md
man/man1/: usnic_devinfo.1
